--- a/Wpf.Core/Wpf.Core/Wpf.Core.csproj
+++ b/Wpf.Core/Wpf.Core/Wpf.Core.csproj
@@ -44,6 +44,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArithmeticConverter.cs" />
     <Compile Include="ExtendedObservableCollection.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="RelayCommand.cs" />
