--- a/Wpf.Core/Wpf.Core/Wpf.Core.csproj
+++ b/Wpf.Core/Wpf.Core/Wpf.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SingleShotTimer.cs" />
     <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
