--- a/Wpf.Core/Wpf.Core/Wpf.Core.csproj
+++ b/Wpf.Core/Wpf.Core/Wpf.Core.csproj
@@ -45,8 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArithmeticConverter.cs" />
+    <Compile Include="EqualsConverter.cs" />
+    <Compile Include="EqualsMultiConverter.cs" />
     <Compile Include="ExtendedObservableCollection.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="NotEqualsConverter.cs" />
+    <Compile Include="NotEqualsMultiConverter.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleShotTimer.cs" />
