--- a/Wpf.Core/Wpf.Core/Wpf.Core.csproj
+++ b/Wpf.Core/Wpf.Core/Wpf.Core.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="NotEqualsConverter.cs" />
     <Compile Include="NotEqualsMultiConverter.cs" />
+    <Compile Include="PropertyChangeNotifier.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleShotTimer.cs" />
